--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,28 +1,16 @@
-<!-- https://materializecss.com/cards.html -->
-<div class="container">
-    <h1>tuluble</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>error</title>
 
-    <div class="row">
-        <div class="col s5">
-            {{!-- <img class="responsive-img" src="/images/phoenix.png" alt="Blue and Red phoenix silhouette"> --}}
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    </head>
+    <body>
+        <!-- https://materializecss.com/cards.html -->
+        <div style="padding:20px">
+            <h1>ERROR!</h1>
         </div>
-        <div class="col s7 ">
-            <div class="card blue-grey darken-1">
-                <div class="card-content white-text">
-                    {{!-- <span class="card-title">MM DD-DD 20XX @ BCA</span> --}}
-                    <p>Error!</p>
-                </div>
-                {{!-- <div class="card-action">
-                    <a href="/events">See what's happening (Events)</a>
-                </div>
-                <div class="card-action">
-                    <a href="/attendees">See who's coming (Attendees)</a>
-                </div>
-                <div class="card-action">
-                    <a href="/projects">See what's being built (Projects)</a>
-                </div> --}}
-
-            </div>
-        </div>
-    </div>
-</div>
+    
+    </body>
+</html>
