--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,31 +1,23 @@
-<!-- https://materializecss.com/cards.html -->
-<div class="container">
-    <h1>tuluble</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>index</title>
 
-    <div class="row">
-    <div class="col s5">
-        {{!-- <img class="responsive-img" src="/images/phoenix.png" alt="Blue and Red phoenix silhouette"> --}}
-    </div>
-    <div class="col s7 ">
-        <div class="card blue-grey darken-1">
-        <div class="card-content white-text">
-            {{!-- <span class="card-title">MM DD-DD 20XX @ BCA</span> --}}
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    </head>
+    <body>
+        <!-- https://materializecss.com/cards.html -->
+        <div style="padding:20px">
+            <h1>tuluble</h1>
             <p>HackBCA will return soon!</p>
             <p>Visit frequently to see updates, including planned events and projects from other attendees.</p>
             <p>Log in with Google to register, plan your schedule, and propose or volunteer for projects.</p>
 
+            <div class = "buttons">
+                <a class="waves-effect waves-light btn-large" href="/inventory">Start</a>
+            </div>
         </div>
-        {{!-- <div class="card-action">
-            <a href="/events">See what's happening (Events)</a>
-        </div>
-        <div class="card-action">
-            <a href="/attendees">See who's coming (Attendees)</a>
-        </div>
-        <div class="card-action">
-            <a href="/projects">See what's being built (Projects)</a>
-        </div> --}}
-
-        </div>
-    </div>
-    </div>
-</div>
+    
+    </body>
+</html>
