changed the hackbca message

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,12 +10,10 @@
         <!-- https://materializecss.com/cards.html -->
         <div style="padding:20px">
             <h1>tuluble</h1>
-            <p>HackBCA will return soon!</p>
-            <p>Visit frequently to see updates, including planned events and projects from other attendees.</p>
-            <p>Log in with Google to register, plan your schedule, and propose or volunteer for projects.</p>
+            <p>plumbing project slay</p>
 
             <div class = "buttons">
-                <a class="waves-effect waves-light btn-large" href="/inventory">Start</a>
+                <a class="waves-effect waves-light btn-large" href="/inventory">Inventory</a>
             </div>
         </div>
     
