--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -9,7 +9,26 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
-
+.tableFixHead {
+    overflow-y: auto;
+    height: 106px;
+}
+.tableFixHead thead th {
+    position: sticky;
+    top: 0;
+}
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+th,
+td {
+    padding: 8px 16px;
+    border: 1px solid #ccc;
+}
+th {
+    background: #eee;
+}
 
 
 
