--- a/views/inventory.hbs
+++ b/views/inventory.hbs
@@ -5,7 +5,7 @@
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-        
+
     </head>
     <body>
         <!-- https://materializecss.com/cards.html -->
@@ -30,6 +30,12 @@
                 </tbody>
             </table>
         </div>
-    
+
+        <div style="padding:20px">
+            <a class = "buttons">
+                <a class = "waves-effect waves-light btn-large" href="/page">please </a>
+                <a style = ".pink_button"></a>
+        </div>
+
     </body>
 </html>
