--- a/views/page.hbs
+++ b/views/page.hbs
@@ -140,12 +140,12 @@
                                         <div class="col s12 m6 l3"><p></p></div>
                                         <div class="col s12 m6 l3"><p></p>
                                             <div class="delete_button">
-                                                <a href="#" class="btn-small">Edit</a>
+                                                <a href="" class="btn-small">Edit</a>
                                             </div>
                                         </div>
                                         <div class="col s12 m6 l3"><p></p>
                                             <div class="delete_button">
-                                                <a href="#" class="btn-small">Delete</a>
+                                                <a href="" class="btn-small">Delete</a>
                                             </div>
                                         </div>
                                 </div>
