ingredient database fixed

--- a/views/page.hbs
+++ b/views/page.hbs
@@ -120,7 +120,7 @@
 
                     {{#each results}}
                     <tr>
-                        <td>{{this.formula_id}}
+                        <td>{{this.ingredient_id}}
                             <a href="#terms" class="modal-trigger">
                                 <span class="large material-icons">info_outline</span>
                             </a>
@@ -161,7 +161,7 @@
                             </script>
                         </td>
 
-                        <td>{{this.test_name}}</td>
+                        <td>{{this.trade_name}}</td>
                     </tr>
                     {{/each}}
                 </tbody>
