--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -15,17 +15,53 @@
             {{#each results}}   
             <div class="row">
                 <div class="col s12 m6">
-                <div class="card blue-grey darken-1">
-                    <div class="card-content white-text">
-                         {{!-- projects/{{this.project_name}} --}}
-                    <spanclass="card-title"><a href = "/projects/{{this.project_id}}">{{this.project_name}}</a></span>
-                    <p>Client: {{this.client}}</p>
-                    <p>{{this.date}}</p>
-                    </div>
-                    <div class="card-action">
+                    {{!-- <a href = "#terms" class = "modal-trigger"> --}}
+                        <div class="card blue-grey darken-1">
+                            <div class="card-content white-text">
+                            {{!-- projects/{{this.project_name}} --}}
+                                <span class="card-title"><a href = "/projects/{{this.project_id}}">{{this.project_name}}</a></span>
+                                <p>Client: {{this.client}}</p>
+                                <p>{{this.date}}</p>
+                            <a href="#terms" class="modal-trigger">
+                                <span class="btn-small">See More</span>
+                            </a>
+                            </div>
+                            
+                        </div>
+                    {{!-- </a> --}}
+                    <div class="modal" id="terms">
+
+                        
+                        <div class="col s12 m6 l3"><p></p>
+                            <div class="delete_button">
+                                <a href="#" class="btn-small">Delete</a>
+                            </div>
+                        </div> 
+                        <div class="col s10 m6 l3"><p></p>
+                            <div class="delete_button">
+                                <a href="#" class="btn-small">Edit</a>
+                            </div>
+                        </div> 
+                        <div class="col s8 m6 l3"><p></p>
+                            <div class="delete_button">
+                                <a href="#" class="btn-small">Open</a>
+                            </div>
+                        </div> 
                     </div>
                 </div>
+            </div>
+                    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+                    <script
+                        src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+                    <script>
+                        $(document).ready(function () {
+                            $('.modal').modal();
+                        })
+                    </script>
                 </div>
+                <div class="card-action"></div>
+            </div>
+        </div>
             </div>
             {{/each}}
 
@@ -38,3 +74,30 @@
     </body>
 </html>
 
+{{!-- <div style="padding:20px">
+            <table>
+                <thead>
+                    <tr>
+                        <th>ID
+                            <span class="large material-icons">import_export</span>
+                        </th>
+                        <th>Name
+                            <span class="large material-icons">import_export</span>
+                        </th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+
+                    {{#each results}}
+                    <tr>
+                        <td>{{this.formula_id}}
+                            
+                        </td>
+
+                        <td>{{this.test_name}}</td>
+                    </tr>
+                    {{/each}}
+                </tbody>
+            </table>
+        </div> --}}
