--- a/views/inventory.hbs
+++ b/views/inventory.hbs
@@ -120,7 +120,7 @@
 
                     {{#each results}}
                     <tr>
-                        <td>{{this.ingredient_id}}
+                        <td>{{this.formula_id}}
                             <a href="#terms" class="modal-trigger">
                                 <span class="large material-icons">info_outline</span>
                             </a>
@@ -162,8 +162,6 @@
                         </td>
 
                         <td>{{this.test_name}}</td>
-                        <td>{{this.ingredient_id}}</td>
-                        <td>{{this.trade_name}}</td>
                     </tr>
                     {{/each}}
                 </tbody>
