--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -1,104 +1,136 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Projects</title>
 
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-        <script type="text/javascript" src="/routes/projects.js"></script>
+<head>
+    <title>Projects</title>
 
-    </head>
-    <body>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <script type="text/javascript" src="/routes/projects.js"></script>
+
+</head>
+
+<body>
+    <div class="container">
         <!-- https://materializecss.com/cards.html -->
-        <div style="padding:20px">
-            <h1>Projects: </h1>
 
-            {{#each results}}   
-            <div class="row">
-                <div class="col s12 m6">
-                    {{!-- <a href = "#terms" class = "modal-trigger"> --}}
-                        <div class="card blue-grey darken-1">
-                            <div class="card-content white-text">
+        <div class="row">
+            <div class="col s12">
+                <p></p>
+                <h1>Projects </h1>
+            </div>
+        </div>
+
+        {{#each results}}
+        <div class="row">
+            <div class="col s7 m6 l6">
+                {{!-- <a href="#terms" class="modal-trigger"> --}}
+                    <div class="card blue-grey darken-1">
+                        <div class="card-content white-text">
                             {{!-- projects/{{this.project_name}} --}}
-                                <span class="card-title"><a href = "/projects/{{this.project_id}}">{{this.project_name}}</a></span>
-                                <p>Client: {{this.client}}</p>
-                                <p>{{this.date}}</p>
+                            <span class="card-title"><a
+                                    href="/projects/{{this.project_id}}">{{this.project_name}}</a></span>
+                            <p>Client: {{this.client}}</p>
+                            <p>{{this.date}}</p>
+                            <div class="col s12">&nbsp;</div>
                             <a href="#terms" class="modal-trigger">
                                 <span class="btn-small">See More</span>
                             </a>
-                            </div>
-                            
                         </div>
-                    {{!-- </a> --}}
-                    <div class="modal" id="terms">
+                    </div>
+            </div>
+            {{!-- </a> --}}
 
-                        
-                        <div class="col s12 m6 l3"><p></p>
-                            <div class="delete_button">
-                                <a href="#" class="btn-small">Delete</a>
-                            </div>
-                        </div> 
-                        <div class="col s10 m6 l3"><p></p>
-                            <div class="delete_button">
-                                <a href="#" class="btn-small">Edit</a>
-                            </div>
-                        </div> 
-                        <div class="col s8 m6 l3"><p></p>
-                            <div class="delete_button">
-                                <a href="#" class="btn-small">Open</a>
-                            </div>
-                        </div> 
+            <div class="modal" id="terms">
+                <div class="row">
+                    <div class="col s12">&nbsp;</div>
+                    <div class="col s12"><b>{{this.project_name}}: Information</b></div>
+                    <div class="col s12">&nbsp;</div>
+                    <div class="col s6">
+                        <span>Client:<br></br>Something:<br></br>Something:<br></br>Something:</span>
+                    </div>
+                    <div class="col s6">
+                        <span>Something:<br></br>Something:<br></br>Something:<br></br>Something:</span>
+                    </div>
+                    <div class="col s12">&nbsp;</div>
+                    {{!-- <div class="col s12 m6 l3">
+                        <p></p>
+                    </div>
+                    <div class="col s12 m6 l3">
+                        <p></p>
+                    </div> --}}
+
+                    <div class="col s12 m6 l3">
+                        <p></p>
+                        <div class="delete_button">
+                            <a href="" class="btn-small">Edit</a>
+                        </div>
+                    </div>
+                    <div class="col s12 m6 l3">
+                        <p></p>
+                        <div class="delete_button">
+                            <a href="" class="btn-small">Delete</a>
+                        </div>
+                    </div>
+                    <div class="col s12 m6 l3">
+                        <p></p>
+                        <div class="open_button">
+                            <a href="#" class="btn-small">Open</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-                    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-                    <script
-                        src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
-                    <script>
-                        $(document).ready(function () {
-                            $('.modal').modal();
-                        })
-                    </script>
-                </div>
-                <div class="card-action"></div>
-            </div>
-        </div>
-            </div>
-            {{/each}}
 
-    
+
+            </div>
         </div>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+        <script>
+            $(document).ready(function () {
+                $('.modal').modal();
+            })
+        </script>
+    </div>
+    <div class="card-action"></div>
+    </div>
+    </div>
+    </div>
+    {{/each}}
+
+
+    </div>
     <a href="/projects/create" class="btn-floating btn-large orange fixed-action-btn">
-      <i class="large material-icons">create</i>
+        <i class="large material-icons">create</i>
     </a>
+    </div>
+</body>
 
-    </body>
 </html>
 
 {{!-- <div style="padding:20px">
-            <table>
-                <thead>
-                    <tr>
-                        <th>ID
-                            <span class="large material-icons">import_export</span>
-                        </th>
-                        <th>Name
-                            <span class="large material-icons">import_export</span>
-                        </th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody>
+    <table>
+        <thead>
+            <tr>
+                <th>ID
+                    <span class="large material-icons">import_export</span>
+                </th>
+                <th>Name
+                    <span class="large material-icons">import_export</span>
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
 
-                    {{#each results}}
-                    <tr>
-                        <td>{{this.formula_id}}
-                            
-                        </td>
+            {{#each results}}
+            <tr>
+                <td>{{this.formula_id}}
 
-                        <td>{{this.test_name}}</td>
-                    </tr>
-                    {{/each}}
-                </tbody>
-            </table>
-        </div> --}}
+                </td>
+
+                <td>{{this.test_name}}</td>
+            </tr>
+            {{/each}}
+        </tbody>
+    </table>
+</div> --}}
