--- a/views/inventory.hbs
+++ b/views/inventory.hbs
@@ -11,13 +11,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
-<body>
-    <div class="container">
+<body style="padding: 2% 2% 0% 2%">
 
         <!-- NAVIGATION SIDEBAR -->
-        <div class="row">
-            <div class="col s6">
-                <ul class="sidenav" id="mysidenav">
+                <ul class="sidenav" id="mysidenav" >
                     <li>
                         <div class="user-view">
                             <div class="background">
@@ -58,8 +55,6 @@
                         M.Sidenav.init(side)
                     })
                 </script>
-            </div>
-        </div>
 
         <!-- BLANK TEAL DIVIDER -->
         {{!-- <div class="row">
@@ -166,8 +161,9 @@
             </table>
         </div>
 
-    </div>
 
+
+</body>
     <!-- FOOTER -->
     <footer class="page-footer grey darken-1">
         <div class="container">
@@ -208,6 +204,5 @@
         </div>
     </footer>
 
-</body>
 
 </html>
