--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -12,6 +12,55 @@
 
 <body>
     <div class="container">
+    </head>
+    <body>
+
+                <!-- NAVIGATION SIDEBAR -->
+        <div style="padding: 2% 2% 0% 2%">
+            <ul class="sidenav" id="mysidenav">
+                <li>
+                    <div class="user-view">
+                        <div class="background">
+                            <img src="./views/luluble_hlogo.jpg" style="height:250px;" alt="">
+
+                        </div>
+                        <span style="color:#000000" class="large material-icons">local_florist
+                        </span>
+                        <a href="#" data-target="side_nav"></a>
+                        {{!-- <a href="#email"><span class="email white-text">web@gmail.com</span></a> --}}
+                    </div>
+                </li>
+                <li><a href="/"><i class="material-icons">home</i>Index Page</a></li>
+                <li><a href="/inventory"><i class="material-icons">book</i>Inventory</a></li>
+                <li><a href="/formulas"><i class="material-icons">insert_chart</i>Formulas</a></li>
+                <li><a href="/projects"><i class="material-icons">import_contacts</i>Projects</a></li>
+                <li><a href="#"><i class="material-icons">create</i>Other</a></li>
+            </ul>
+
+            {{!-- <a href="#" data-target="mysidenav" class="btn sidenav-trigger">Sidenav</a> --}}
+
+            <a href="#" data-target="mysidenav" class="btn sidenav-trigger">
+                <i class="material-icons">menu</i>
+                <span class="blue-text text-darken-2"></span>
+            </a>
+
+            <!-- NAVIGATION SIDEBAR (location to put icon NEXT to the sidebar lines) -->
+            {{!-- <div class="col s6">
+                <img src="/luluble_hlogo.jpg" class="responsive-img">
+            </div> --}}
+            {{!-- <span style="color:#000000" class="large material-icons">local_florist</span> --}}
+
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+            <script>
+                document.addEventListener('DOMContentLoaded', function () {
+                    var side = document.querySelectorAll('.sidenav');
+                    M.Sidenav.init(side)
+                })
+            </script>
+        </div>
+
+
         <!-- https://materializecss.com/cards.html -->
 
         <div class="row">
