--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -1,31 +1,28 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <title>Projects</title>
+    <head>
+        <title>Projects</title>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <script type="text/javascript" src="/routes/projects.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <script type="text/javascript" src="/routes/projects.js"></script>
 
-</head>
-
-<body>
-    <div class="container">
     </head>
-    <body>
 
+    <body style="padding: 2% 2% 0% 2%">
                 <!-- NAVIGATION SIDEBAR -->
-        <div style="padding: 2% 2% 0% 2%">
+        <div >
             <ul class="sidenav" id="mysidenav">
                 <li>
                     <div class="user-view">
                         <div class="background">
                             <img src="./views/luluble_hlogo.jpg" style="height:250px;" alt="">
-
                         </div>
+                        
                         <span style="color:#000000" class="large material-icons">local_florist
                         </span>
+                        
                         <a href="#" data-target="side_nav"></a>
                         {{!-- <a href="#email"><span class="email white-text">web@gmail.com</span></a> --}}
                     </div>
@@ -63,12 +60,7 @@
 
         <!-- https://materializecss.com/cards.html -->
 
-        <div class="row">
-            <div class="col s12">
-                <p></p>
                 <h1>Projects </h1>
-            </div>
-        </div>
 
         {{#each results}}
         <div class="row">
@@ -128,31 +120,29 @@
                         </div>
                     </div>
                 </div>
-
-
             </div>
         </div>
+        
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+        
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+        
         <script>
             $(document).ready(function () {
                 $('.modal').modal();
             })
         </script>
-    </div>
-    <div class="card-action"></div>
-    </div>
-    </div>
-    </div>
-    {{/each}}
+
+        <div class="card-action"></div>
+
+        {{/each}}
 
 
-    </div>
-    <a href="/projects/create" class="btn-floating btn-large orange fixed-action-btn">
-        <i class="large material-icons">create</i>
-    </a>
-    </div>
-</body>
+        </div>
+        <a href="/projects/create" class="btn-floating btn-large orange fixed-action-btn">
+            <i class="large material-icons">create</i>
+        </a>
+    </body>
 
 </html>
 
