--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -29,7 +29,11 @@ td {
 th {
     background: #eee;
 }
-
+.logoutButton{
+    padding-right:20px;
+    padding-top: 20px;
+    /* text-align: right; */
+}
 
 
 
