--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -10,139 +10,181 @@
 
     </head>
 
-    <body style="padding: 2% 2% 0% 2%">
+    <body>
+        <div style="padding: 2% 2% 0% 2%">
                 <!-- NAVIGATION SIDEBAR -->
-        <div >
-            <ul class="sidenav" id="mysidenav">
-                <li>
-                    <div class="user-view">
-                        <div class="background">
-                            <img src="./views/luluble_hlogo.jpg" style="height:250px;" alt="">
+            <div >
+                <ul class="sidenav" id="mysidenav">
+                    <li>
+                        <div class="user-view">
+                            <div class="background">
+                                <img src="./views/luluble_hlogo.jpg" style="height:250px;" alt="">
+                            </div>
+                            
+                            <span style="color:#000000" class="large material-icons">local_florist
+                            </span>
+                            <span style="color:#25b5af"><b><font size="+2">&nbsp;tuluble database</font></b></span>
+                            
+                            <a href="#" data-target="side_nav"></a>
+                            {{!-- <a href="#email"><span class="email white-text">web@gmail.com</span></a> --}}
                         </div>
-                        
-                        <span style="color:#000000" class="large material-icons">local_florist
-                        </span>
-                        
-                        <a href="#" data-target="side_nav"></a>
-                        {{!-- <a href="#email"><span class="email white-text">web@gmail.com</span></a> --}}
-                    </div>
-                </li>
-                <li><a href="/"><i class="material-icons">home</i>Index Page</a></li>
-                <li><a href="/inventory"><i class="material-icons">book</i>Inventory</a></li>
-                <li><a href="/formulas"><i class="material-icons">insert_chart</i>Formulas</a></li>
-                <li><a href="/projects"><i class="material-icons">import_contacts</i>Projects</a></li>
-                <li><a href="#"><i class="material-icons">create</i>Other</a></li>
-            </ul>
+                    </li>
+                    <li><a href="/"><i class="material-icons">home</i>Index Page</a></li>
+                    <li><a href="/inventory"><i class="material-icons">book</i>Inventory</a></li>
+                    <li><a href="/formulas"><i class="material-icons">insert_chart</i>Formulas</a></li>
+                    <li><a href="/projects"><i class="material-icons">import_contacts</i>Projects</a></li>
+                    {{!-- <li><a href="#"><i class="material-icons">create</i>Other</a></li> --}}
+                </ul>
 
-            {{!-- <a href="#" data-target="mysidenav" class="btn sidenav-trigger">Sidenav</a> --}}
+                {{!-- <a href="#" data-target="mysidenav" class="btn sidenav-trigger">Sidenav</a> --}}
 
-            <a href="#" data-target="mysidenav" class="btn sidenav-trigger">
-                <i class="material-icons">menu</i>
-                <span class="blue-text text-darken-2"></span>
-            </a>
+                <a href="#" data-target="mysidenav" class="btn sidenav-trigger">
+                    <i class="material-icons">menu</i>
+                    <span class="blue-text text-darken-2"></span>
+                </a>
 
-            <!-- NAVIGATION SIDEBAR (location to put icon NEXT to the sidebar lines) -->
-            {{!-- <div class="col s6">
-                <img src="/luluble_hlogo.jpg" class="responsive-img">
-            </div> --}}
-            {{!-- <span style="color:#000000" class="large material-icons">local_florist</span> --}}
+                <!-- NAVIGATION SIDEBAR (location to put icon NEXT to the sidebar lines) -->
+                {{!-- <div class="col s6">
+                    <img src="/luluble_hlogo.jpg" class="responsive-img">
+                </div> --}}
+                {{!-- <span style="color:#000000" class="large material-icons">local_florist</span> --}}
 
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
-            <script>
-                document.addEventListener('DOMContentLoaded', function () {
-                    var side = document.querySelectorAll('.sidenav');
-                    M.Sidenav.init(side)
-                })
-            </script>
-        </div>
-
-
-        <!-- https://materializecss.com/cards.html -->
-
-                <h1>Projects </h1>
-
-        {{#each results}}
-        <div class="row">
-            <div class="col s7 m6 l6">
-                {{!-- <a href="#terms" class="modal-trigger"> --}}
-                    <div class="card blue-grey darken-1">
-                        <div class="card-content white-text">
-                            {{!-- projects/{{this.project_name}} --}}
-                            <span class="card-title"><a
-                                    href="/projects/{{this.project_id}}">{{this.project_name}}</a></span>
-                            <p>Client: {{this.client}}</p>
-                            <p>{{this.date}}</p>
-                            <div class="col s12">&nbsp;</div>
-                            <a href="#terms" class="modal-trigger">
-                                <span class="btn-small">See More</span>
-                            </a>
-                        </div>
-                    </div>
+                <script>
+                    document.addEventListener('DOMContentLoaded', function () {
+                        var side = document.querySelectorAll('.sidenav');
+                        M.Sidenav.init(side)
+                    })
+                </script>
             </div>
-            {{!-- </a> --}}
 
-            <div class="modal" id="terms">
-                <div class="row">
-                    <div class="col s12">&nbsp;</div>
-                    <div class="col s12"><b>{{this.project_name}}: Information</b></div>
-                    <div class="col s12">&nbsp;</div>
-                    <div class="col s6">
-                        <span>Client:<br></br>Something:<br></br>Something:<br></br>Something:</span>
-                    </div>
-                    <div class="col s6">
-                        <span>Something:<br></br>Something:<br></br>Something:<br></br>Something:</span>
-                    </div>
-                    <div class="col s12">&nbsp;</div>
-                    {{!-- <div class="col s12 m6 l3">
-                        <p></p>
-                    </div>
-                    <div class="col s12 m6 l3">
-                        <p></p>
-                    </div> --}}
 
-                    <div class="col s12 m6 l3">
-                        <p></p>
-                        <div class="delete_button">
-                            <a href="" class="btn-small">Edit</a>
+            <!-- https://materializecss.com/cards.html -->
+
+                    <h1>Projects </h1>
+
+            {{#each results}}
+            <div class="row">
+                <div class="col s7 m6 l6">
+                    {{!-- <a href="#terms" class="modal-trigger"> --}}
+                        <div class="card blue-grey darken-1">
+                            <div class="card-content white-text">
+                                {{!-- projects/{{this.project_name}} --}}
+                                <span class="card-title"><a
+                                        href="/projects/{{this.project_id}}">{{this.project_name}}</a></span>
+                                <p>Client: {{this.client}}</p>
+                                <p>{{this.date}}</p>
+                                <div class="col s12">&nbsp;</div>
+                                <a href="#terms" class="modal-trigger">
+                                    <span class="btn-small">See More</span>
+                                </a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col s12 m6 l3">
-                        <p></p>
-                        <div class="delete_button">
-                            <a href="" class="btn-small">Delete</a>
+                </div>
+                {{!-- </a> --}}
+
+                <div class="modal" id="terms">
+                    <div class="row">
+                        <div class="col s12">&nbsp;</div>
+                        <div class="col s12"><b>{{this.project_name}}: Information</b></div>
+                        <div class="col s12">&nbsp;</div>
+                        <div class="col s6">
+                            <span>Client:<br></br>Something:<br></br>Something:<br></br>Something:</span>
                         </div>
-                    </div>
-                    <div class="col s12 m6 l3">
-                        <p></p>
-                        <div class="open_button">
-                            <a href="#" class="btn-small">Open</a>
+                        <div class="col s6">
+                            <span>Something:<br></br>Something:<br></br>Something:<br></br>Something:</span>
+                        </div>
+                        <div class="col s12">&nbsp;</div>
+                        {{!-- <div class="col s12 m6 l3">
+                            <p></p>
+                        </div>
+                        <div class="col s12 m6 l3">
+                            <p></p>
+                        </div> --}}
+
+                        <div class="col s12 m6 l3">
+                            <p></p>
+                            <div class="delete_button">
+                                <a href="" class="btn-small">Edit</a>
+                            </div>
+                        </div>
+                        <div class="col s12 m6 l3">
+                            <p></p>
+                            <div class="delete_button">
+                                <a href="" class="btn-small">Delete</a>
+                            </div>
+                        </div>
+                        <div class="col s12 m6 l3">
+                            <p></p>
+                            <div class="open_button">
+                                <a href="#" class="btn-small">Open</a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+            
+            <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+            
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+            
+            <script>
+                $(document).ready(function () {
+                    $('.modal').modal();
+                })
+            </script>
+
+            <div class="card-action"></div>
+
+            {{/each}}
+
+
+            </div>
+            <a href="/projects/create" class="btn-floating btn-large orange fixed-action-btn">
+                <i class="large material-icons">create</i>
+            </a>
         </div>
-        
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-        
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
-        
-        <script>
-            $(document).ready(function () {
-                $('.modal').modal();
-            })
-        </script>
-
-        <div class="card-action"></div>
-
-        {{/each}}
-
-
-        </div>
-        <a href="/projects/create" class="btn-floating btn-large orange fixed-action-btn">
-            <i class="large material-icons">create</i>
-        </a>
     </body>
+
+    <footer class="page-footer grey darken-1">
+            <div class="container">
+                <div class="row">
+                    <div class="col s12 l6">
+                        <h5>About luluble</h5>
+                        <p>Boutique laboratory focused on innovative thinking in product development.
+                            Offer full-service development from “concept to counter”</p>
+                    </div>
+                    <div class="col s12 l4 offset-l2">
+                        <h5>Connect</h5>
+                        <ul>
+                            <li>
+                                {{!-- <span class="large material-icons">open_in_browser</span> --}}
+                                <a href="https://www.luluble.com/" class="grey-text text-lighten-3">Website</a>
+                            </li>
+                            <li>
+                                {{!-- <span class="large material-icons">open_in_browser</span> --}}
+                                <a href="https://www.instagram.com/luluble_inc/?igshid=zkxn18fwn7fy"
+                                    class="grey-text text-lighten-3">Instagram</a>
+                            </li>
+                            <li>
+                                {{!-- <span class="large material-icons">open_in_browser</span> --}}
+                                <a href="https://www.pinterest.com/luluble_inc/"
+                                    class="grey-text text-lighten-3">Pinterest</a>
+                            </li>
+                            <li>
+                                {{!-- <span class="large material-icons">open_in_browser</span> --}}
+                                <a href="https://www.linkedin.com/company/luluble/about/"
+                                    class="grey-text text-lighten-3">LinkedIn</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-copyright grey darken-4">
+                <div class="container center-align">&copy; 2022 tuluble</div>
+            </div>
+        </footer>
 
 </html>
 
