--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -118,7 +118,7 @@
                         <div class="col s12 m6 l3">
                             <p></p>
                             <div class="open_button">
-                                <a href="#" class="btn-small">Open</a>
+                                <a href="/formulas" class="btn-small">Open</a>
                             </div>
                         </div>
                     </div>
