--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -87,13 +87,13 @@
                 <div class="modal" id="terms">
                     <div class="row">
                         <div class="col s12">&nbsp;</div>
-                        <div class="col s12"><b>{{this.project_name}}: Information</b></div>
+                        <div class="col s12"><b><font size="+2">{{this.project_name}}</font></b></div>
                         <div class="col s12">&nbsp;</div>
                         <div class="col s6">
-                            <span>Client:<br></br>Something:<br></br>Something:<br></br>Something:</span>
+                            <span><b>Client:</b> {{this.client}}<br></br><b>Date:</b> {{this.date}}</span>
                         </div>
                         <div class="col s6">
-                            <span>Something:<br></br>Something:<br></br>Something:<br></br>Something:</span>
+                            <span><b>Number of Formulas:</b> 3<br></br><b>Other: </b>Information</span>
                         </div>
                         <div class="col s12">&nbsp;</div>
                         {{!-- <div class="col s12 m6 l3">
